fixed console errors either through creative use of ng-attr, or fixing errors in the javascript.

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -1,7 +1,7 @@
 [
 {rpg_battlemap, [
 	% {listen_host, '_'},
-	% {hostname, <<"localhost">>},
+	{hostname, <<"cypher">>},
 	% {port, 9090},
 	% {listeners, 10},
 	% {keyfile, priv_dir ++ "/key"},
